@@ -1,3 +1,10 @@
+2008-10-19  Jens Granseuer  <jensgr@gmx.net>
+
+	Merged from trunk.
+
+	* gnome-keyboard-properties-a11y.c: (setup_a11y_tabs): actually connect
+	the stickykeys_two_key_off button (bug #556818)
+
 ==================== 2.24.0.1 ====================
 
 2008-09-21  Jens Granseuer  <jensgr@gmx.net>
